@@ -1,4 +1,6 @@
 
+2011-03-03 Rupert Germann <rupi@gmx.li>
+	* fixed bug #14001 (part 2): Deleted flag was not taken into account when checking categories for localized records
 
 2011-03-02 Rupert Germann <rupi@gmx.li>
 	* fixed bug #14001: User can't edit news with deleted categories
